--- a/client/components/style/App.css
+++ b/client/components/style/App.css
@@ -2,4 +2,7 @@ html,body { height: 100%; margin: 0; }
 
 #app {
     height:100%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: minmax(0, 1fr) repeat(24, 1fr);
 }
