--- a/client/components/style/Nav.css
+++ b/client/components/style/Nav.css
@@ -1,26 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
 
 .NavBar{
+    grid-column: 1 / -1;
+    grid-row: 1 / 3;
     box-sizing: border-box;
     margin:0;
     padding:0;
-    background-color: blue;
+    background-color: grey;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 2px 1% 2px 1%;
-    position: fixed;
-    top: 0px;
-    width:100%;
-    height:10%;
+    justify-content: space-between;
 }
 
-.NavBar li,a,button{
-    font-family: "Montserrat", sans-serif;
-    font-weight:500;
-    font-size: 16px;
-    color:wheat;
-    text-decoration:none;
+.NavBar > * {
+    flex-basis: 20%;
 }
 
 .logo {
@@ -28,29 +21,37 @@
     object-fit: contain;
     max-height:100%;
     margin:0px;
+    overflow: hidden;
+}
+.nav__link:link, .nav__link:visited{
+    text-decoration: none;
+    color: black;
+}
+
+.nav__link:hover {
+   background-color: #555;
 }
 .nav__links {
-    max-height:100%;
+    flex: 1;
+    display:flex;
     list-style:none;
+    justify-content: space-between;
 }
-.nav__links li {
-    display:inline-block;
-    padding: 0px 10%;
+.nav__links .nav__link{
+    
 }
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-}
-.nav__links li a:hover {
-    color: red;
+
+.contact{
+    text-align: center;
 }
 
 button {
-object-fit: contain;
-max-height:100%;
-background-color: green;
-border:none;
-border-radius: 50px;
-cursor: pointer;
-transition: all 0.3s ease 0s;
-
-}
+    object-fit: contain;
+    max-height:100%;
+    background-color: lightblue;
+    border:none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    
+    }
