--- a/client/components/style/Nav.css
+++ b/client/components/style/Nav.css
@@ -6,10 +6,11 @@
     box-sizing: border-box;
     margin:0;
     padding:0;
-    background-color: grey;
+    background-color: rgb(52,58,64);
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: rgb(153,156,159)
 }
 
 .NavBar > * {
@@ -25,7 +26,7 @@
 }
 .nav__link:link, .nav__link:visited{
     text-decoration: none;
-    color: black;
+    color: grey;
 }
 
 .nav__link:hover {
